[gd_scene load_steps=5 format=2]

[ext_resource path="res://maps/map_01/Map_01.tscn" type="PackedScene" id=1]
[ext_resource path="res://maps/map_01/Explore.gd" type="Script" id=2]
[ext_resource path="res://actors/hider/Hider.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/seeker/Seeker.tscn" type="PackedScene" id=4]

[node name="base" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Seeker00" parent="players" index="1" instance=ExtResource( 4 )]
position = Vector2( -94.4736, 272.924 )
playerName = "Adam"

[node name="Hider00" parent="players" index="2" instance=ExtResource( 3 )]
position = Vector2( 404.137, 493.362 )
playerName = "Alex"

[node name="Hider05" parent="players" index="3" instance=ExtResource( 3 )]
position = Vector2( 390, -620 )
playerName = "Bob"

[node name="Hider01" parent="players" index="4" instance=ExtResource( 3 )]
position = Vector2( 432.129, 265.926 )
playerName = "Stacy"

[node name="Hider02" parent="players" index="5" instance=ExtResource( 3 )]
position = Vector2( 930, -760 )
playerName = "John"

[node name="Hider03" parent="players" index="6" instance=ExtResource( 3 )]
position = Vector2( 780, -1460 )
playerName = "Jake"

[node name="Hider04" parent="players" index="7" instance=ExtResource( 3 )]
position = Vector2( 1260, -1320 )
playerName = "July"

[node name="GameStartTimer" parent="." index="5"]
wait_time = 3.0

[node name="GracePeriodTimer" parent="." index="6"]
wait_time = 3.0

[node name="ExitButton" type="Button" parent="UiLayer" index="5"]
margin_left = 10.0
margin_top = 10.0
margin_right = 199.0
margin_bottom = 47.0
text = "Done Exploring"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HidersLabel" type="Label" parent="UiLayer" index="6"]
margin_left = 10.0
margin_top = 60.0
margin_right = 241.0
margin_bottom = 85.0
text = "Fugitives to find: 0/10"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UiLayer/ExitButton" to="." method="_on_ExitButton_pressed"]
